# DiamondLaplace

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: README.md
data/Surface/: bunny-dual.off
data/Volume/: bunny.mesh
data/Volume/balls/: Hexahedral_sphere.ovm
data/Volume/cubes/: cube_tetrahedron_1.ovm  cube_tetrahedron_2.ovm  cube_tetrahedron_3.ovm
src/: CMakeLists.txt  SurfaceViewer.cpp  SurfaceViewer.h  VolumeViewer.cpp  VolumeViewer.h
src/Surface/: CMakeLists.txt  Curvature.cpp  Curvature.h  Diamond_2D.cpp  GeodesicsInHeat.cpp  GeodesicsInHeat.h  LaplaceConstruction.cpp  LaplaceConstruction.h  Parameterization.cpp  Parameterization.h  Poisson_System.cpp  Poisson_System.h  Smoothing.cpp  Smoothing.h  SpectralProcessing.cpp  SpectralProcessing.h  diffgeo.cpp  diffgeo.h
src/Volume/: CMakeLists.txt  Diamond_3D.h  Eigenmodes.cpp  Eigenmodes.h  Franke_PoissonSystem_3D.cpp  Franke_PoissonSystem_3D.h  GeodesicsInHeat_3d.cpp  GeodesicsInHeat_3d.h  LaplaceConstruction_3D.cpp  LaplaceConstruction_3D.h  diffgeo_3D.cpp  diffgeo_3D.h
src/VolumeMesh/: VolumeMesh.cpp  VolumeMesh.h  VolumeMeshGL.cpp  VolumeMeshGL.h  VolumeMeshIO.cpp  VolumeMeshIO.h  VolumeMeshViewer.cpp  VolumeSubdivision.cpp  VolumeSubdivision.h
